--- a/androidapp_4/app/src/main/res/values/strings.xml
+++ b/androidapp_4/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Androidapp4</string>
     <string name="search_hint">Enter podcast search</string>
+    <string name="subscribe">Subscribe</string>
+    <string name="ok_button">OK</string>
+    <string name="pause">Pause</string>
+    <string name="play">Play</string>
 
 </resources>
